--- a/index.html
+++ b/index.html
@@ -4,13 +4,59 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="/lab-css-instagram-clone/styles/style.css" />
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="page">
+
+    <div class="iphone">
+      <img src="/lab-css-instagram-clone/images/phones.png" alt="phones">
+  </div>
+  <div class="main">
+    <div class="login">
+      <ul>
+        <li>
+          <img src="./images/brand.png" alt="insta-logo">
+        </li>
+        <li><button class="log-button">
+          <img src="/lab-css-instagram-clone/images/home.png" alt="Instagram">Log in</button>
+        </li>
+       
+      </ul>
+    </div>
+    <div class="text-section"> 
+      <h1>Capture and Share the World's Moments </h1>
+      <p>Instagram is a fast,
+       beautiful and fun way to share your life with friends and family. Take a
+       picture or video, choose a filter to transform its look and feel, then post
+       to Instagram &mdash; it's that easy. You can even share to Facebook,
+       Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we
+       mention it's free?</p> 
+    </div>
+    <div class="links">
+      <button><img src="./images/badge-iphone.png" alt="Download on the App Store"></button>
+      <button><img src="./images/badge-android.png" alt="Get it on Google Play"></button>
+    </div>
+  </div>
+</div>
+    <footer>
+      <div class="foot"></div> <ul>
+      <li><a href="#" alt="About Us">About Us</li>
+      <li><a href="#" alt="Support">Support</li>
+      <li><a href="#" alt="Blog">Blog</li>
+      <li><a href="#" alt="Press">Press</li>
+      <li><a href="#" alt="API">API</li>
+      <li><a href="#" alt="Jobs">Jobs</li>
+      <li><a href="#" alt="Privacy">Privacy</li>
+      <li><a href="#" alt="Terms">Terms</li>
+      <li>
+        <blockquote> 
+          &copy; 2014 Instagram
+        </blockquote>
+      </li>
+    </ul> 
+  
+</footer>
   </body>
 </html>
