text and footer to be fixed

--- a/index.html
+++ b/index.html
@@ -8,12 +8,6 @@
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    <div class="page">
-
-    <div class="iphone">
-      <img src="/lab-css-instagram-clone/images/phones.png" alt="phones">
-  </div>
-  <div class="main">
     <div class="login">
       <ul>
         <li>
@@ -25,6 +19,12 @@
        
       </ul>
     </div>
+    
+    <div class="page">
+    <div class="iphone">
+      <img src="/lab-css-instagram-clone/images/phones.png" alt="phones">
+  </div>
+  <div class="main">
     <div class="text-section"> 
       <h1>Capture and Share the World's Moments </h1>
       <p>Instagram is a fast,
@@ -33,15 +33,16 @@
        to Instagram &mdash; it's that easy. You can even share to Facebook,
        Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we
        mention it's free?</p> 
-    </div>
-    <div class="links">
-      <button><img src="./images/badge-iphone.png" alt="Download on the App Store"></button>
-      <button><img src="./images/badge-android.png" alt="Get it on Google Play"></button>
+       <div class="links">
+        <li><a href="#" alt="Download on the App Store"><img src="./images/badge-iphone.png" alt="Download on the App Store"></li>
+        <li><a href="#" alt="Get it on Google Play"><img src="./images/badge-android.png" alt="Get it on Google Play"></li>
+      </div>
     </div>
   </div>
 </div>
     <footer>
-      <div class="foot"></div> <ul>
+      <div class="foot">
+       <ul>
       <li><a href="#" alt="About Us">About Us</li>
       <li><a href="#" alt="Support">Support</li>
       <li><a href="#" alt="Blog">Blog</li>
@@ -50,13 +51,11 @@
       <li><a href="#" alt="Jobs">Jobs</li>
       <li><a href="#" alt="Privacy">Privacy</li>
       <li><a href="#" alt="Terms">Terms</li>
-      <li>
-        <blockquote> 
-          &copy; 2014 Instagram
-        </blockquote>
-      </li>
+      <quote> 
+        &copy; 2014 Instagram
+      </quote>
     </ul> 
-  
-</footer>
-  </body>
+  </div>
+  </footer>
+</body>
 </html>
