--- a/index.html
+++ b/index.html
@@ -27,15 +27,17 @@
   <div class="main">
     <div class="text-section"> 
       <h1>Capture and Share the World's Moments </h1>
-      <p>Instagram is a fast,
-       beautiful and fun way to share your life with friends and family. Take a
+      <p>Instagram is a <strong>fast</strong>,
+      <strong> beautiful</strong> and <strong>fun</strong> way to share your life with friends and family. Take a
        picture or video, choose a filter to transform its look and feel, then post
        to Instagram &mdash; it's that easy. You can even share to Facebook,
        Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we
        mention it's free?</p> 
        <div class="links">
-        <li><a href="#" alt="Download on the App Store"><img src="./images/badge-iphone.png" alt="Download on the App Store"></li>
-        <li><a href="#" alt="Get it on Google Play"><img src="./images/badge-android.png" alt="Get it on Google Play"></li>
+        <ul>
+          <li><a href="#" alt="Download on the App Store"><img src="./images/badge-iphone.png" alt="Download on the App Store"></li>
+            <li><a href="#" alt="Get it on Google Play"><img src="./images/badge-android.png" alt="Get it on Google Play"></li>
+        </ul>
       </div>
     </div>
   </div>
@@ -43,14 +45,14 @@
     <footer>
       <div class="foot">
        <ul>
-      <li><a href="#" alt="About Us">About Us</li>
-      <li><a href="#" alt="Support">Support</li>
-      <li><a href="#" alt="Blog">Blog</li>
-      <li><a href="#" alt="Press">Press</li>
-      <li><a href="#" alt="API">API</li>
-      <li><a href="#" alt="Jobs">Jobs</li>
-      <li><a href="#" alt="Privacy">Privacy</li>
-      <li><a href="#" alt="Terms">Terms</li>
+      <li><a href="#" alt="About Us"></a>About Us</li>
+      <li><a href="#" alt="Support"></a>Support</li>
+      <li><a href="#" alt="Blog"></a>Blog</li>
+      <li><a href="#" alt="Press"></a>Press</li>
+      <li><a href="#" alt="API"></a>API</li>
+      <li><a href="#" alt="Jobs"></a>Jobs</li>
+      <li><a href="#" alt="Privacy"></a>Privacy</li>
+      <li><a href="#" alt="Terms"></a>Terms</li>
       <quote> 
         &copy; 2014 Instagram
       </quote>
